steph comment spacing fix

--- a/public/style.css
+++ b/public/style.css
@@ -3135,7 +3135,7 @@ html {
 
 [chat-active] .comment-2 {
   margin-left: 40px;
-  width: 367px;
+  width: 457px;
   float: none;
 
 }
